--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Piotr Grabowski <fau999@gmail.com>
 
-Copyright 2014 natrank Developers
+Copyright (C) 2014-2016 natrank Developers
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
